<resources>

    <string name="app_name">Sea_Game_Testing</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="user">User:</string>
	<string name="password">Password:</string>
	<string name="user_intput">Intput user name</string>
	<string name="password_intput">Intput user Password</string>
	<string name="login">Login</string>
	<string name="cancel">Cancel</string>
	<string name="info">User: %1$s \t Sex: %2$s \t Age: %3$s\nCheckpoints: %4$s  </string>
	<string name="play">Play</string>
	<string name="go_to_user_info">Go To User Info</string>
	<string name="checkpoints">Checkpoints: 1</string>
	<string name="press">Press: 14</string>
	<string name="test">Checkpoints: 1 \n Press: 14</string>
	<string name="game_info">Stage: %1$s \nScore: %2$s</string>
	<string name="device_number">Now devices number %1$</string>
	<string name="next">Next</string>
</resources>